更新 .gitignore 文件，移除重复对 .aab 文件的忽略规则；更新 CONTRIBUTING.md 文档，明确 JDK 版本要求并增加资源使用原则，强调字符串、颜色和尺寸资源的管理规范；更新 README.md，调整 Android SDK 和 JDK 版本要求，简化安装步骤；新增 GitHub Actions 工作流配置文件，支持 CI/CD 流程，包括构建、测试和发布 APK。