@@ -71,6 +71,7 @@ import com.citadawn.speechapp.util.ViewHelper;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.OutputStream;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -1441,8 +1442,7 @@ public class MainActivity extends AppCompatActivity {
                 tvSelectedTestCases.setTextColor(ContextCompat.getColor(this, R.color.accent_warning));
                 // 设置标题文字颜色（通过findViewById获取标题TextView）
                 android.view.View parentView = (android.view.View) tvSelectedTestCases.getParent();
-                if (parentView instanceof android.widget.LinearLayout) {
-                    android.widget.LinearLayout linearLayout = (android.widget.LinearLayout) parentView;
+                if (parentView instanceof LinearLayout linearLayout) {
                     if (linearLayout.getChildCount() > 0) {
                         android.view.View titleView = linearLayout.getChildAt(0);
                         if (titleView instanceof android.widget.TextView) {
@@ -1459,8 +1459,7 @@ public class MainActivity extends AppCompatActivity {
                 tvSelectedTestCases.setTextColor(ContextCompat.getColor(this, R.color.gray_666));
                 // 恢复标题默认颜色
                 android.view.View parentView = (android.view.View) tvSelectedTestCases.getParent();
-                if (parentView instanceof android.widget.LinearLayout) {
-                    android.widget.LinearLayout linearLayout = (android.widget.LinearLayout) parentView;
+                if (parentView instanceof LinearLayout linearLayout) {
                     if (linearLayout.getChildCount() > 0) {
                         android.view.View titleView = linearLayout.getChildAt(0);
                         if (titleView instanceof android.widget.TextView) {
@@ -1639,7 +1638,7 @@ public class MainActivity extends AppCompatActivity {
             try {
                 // 解码URL编码的字符，特别是中文字符
                 // 使用字符串参数而非StandardCharsets.UTF_8以保持API 24兼容性
-                String decodedPath = java.net.URLDecoder.decode(subPath, "UTF-8");
+                String decodedPath = java.net.URLDecoder.decode(subPath, StandardCharsets.UTF_8);
                 return "/storage/emulated/0/" + decodedPath.replace("%2F", "/");
             } catch (Exception e) {
                 // 如果解码失败，返回原始路径
